--- a/templates/results.html
+++ b/templates/results.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Web App</title>
+        <title>Prediction</title>
         <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -16,54 +16,33 @@
         <link href="static/css/styles.css" rel="stylesheet" />
     </head>
     <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="/">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0"></ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Page Header-->
         <header class="masthead" style="background-image: url('static/assets/img/BG.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Mental Health Sentiment Analysis </h1>
-                            <span class="subheading">A Mental Health Sentiment Analysis Checking Web App By Jami</span>
+                            <h1>Mental Health Status</h1>
+                             <h1>{{prediction}}</h1>
+                            <span class="subheading"></span>
                         </div>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- Main Content-->
-        <div class="container px-4 px-lg-5">
-
-           <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Form-v9 by Colorlib</title>
-	<!-- Mobile Specific Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<!-- Font-->
-	<!-- Main Style Css -->
-    <link rel="stylesheet" href="static/css2/style.css"/>
-</head>
-
-<body class="form-v9">
-	<div class="page-content">
-		<div class="form-v9-content" style="background-image: url('static/assets/img/BG.png')">
-			<form class="form-detail" action="/predict" method="post">
-				<h2>Lemme Know About Your Feelings</h2>
-					<div class="form-row">
-                        <label for="Thoughts"> Your thoughts:</label>
-                        <input type="text" name="Thoughts" id="Thoughts" class="input-text" placeholder="Thoughts" required>
-
-				</div>
-
-				<div class="form-row-last">
-					<input type="submit" name="register" class="register" value="Predict">
-				</div>
-			</form>
-		</div>
-	</div>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-</html>
-
-        </div>
 
 
         <!-- Footer-->
@@ -89,7 +68,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.kaggle.com/YourKaggleUsername">
+                                <a href="https://www.kaggle.com/Jamiyat">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-kaggle fa-stack-1x fa-inverse"></i>
