--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.kaggle.com/YourKaggleUsername">
+                                <a href="https://www.kaggle.com/Jamiyat">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-kaggle fa-stack-1x fa-inverse"></i>
